# roland

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: default_config.yaml  keybinds.yaml  responses.yaml
roland/: __init__.py  config.py  main.py
roland/audio/: __init__.py  pipeline.py  stt.py  tts.py  wake_word.py
roland/keyboard/: __init__.py  executor.py  keybinds.py
roland/llm/: __init__.py  context.py  interpreter.py  ollama_client.py  prompts.py
roland/macros/: __init__.py  manager.py  storage.py
roland/ui/: __init__.py  tray.py
roland/utils/: __init__.py  logger.py
tests/: __init__.py  test_keybinds.py  test_keyboard.py
